<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sixteen_dp"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".view.DetailMovieActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collapsingToolbarLayout"
        app:layout_constraintVertical_bias="0.58000004" />

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/button_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail_movie"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/set_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_favorite"
            android:layout_gravity="end"
            android:contentDescription="@string/favorite" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collapsingToolbarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="250dp"
                android:layout_height="320dp"
                android:layout_gravity="center"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"
                android:src="@drawable/loadimg" />

            <TextView
                android:id="@+id/tv_movie"
                style="@style/Movie"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:textColor="@color/white"
                android:textSize="@dimen/twentyfour_sp" />

            <TextView
                android:id="@+id/movie_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_release"
                android:textColor="@color/white"
                android:textSize="@dimen/twelve_sp"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star_rate"
                android:src="@drawable/star_rate" />

            <TextView
                android:id="@+id/movie_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_rate"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_votecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_popularity"
                android:textColor="@color/white"
                android:textSize="@dimen/twelve_sp" />

            <TextView
                style="@style/Overview"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/tv_des"
                style="@style/Description"
                android:layout_marginTop="4dp"
                android:text="@string/tv_des"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>