<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.rezaharis.movieku.view.MoviesFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvshows"
        android:name="com.rezaharis.movieku.view.TvShowsFragment"
        android:label="fragment_info"
        tools:layout="@layout/fragment_tvshows" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.rezaharis.movieku.view.FavoritesFragment"
        android:label="fragment_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>